--- a/access/css/index.css
+++ b/access/css/index.css
@@ -54,6 +54,10 @@
     margin-right: 10px;
 }
 
+.header_main .box_nav .box_menu .item_menu:last-child{
+    margin-right: 0;
+}
+
 .header_main .box_nav .box_menu .item_menu::before{
     content: "";
     position: absolute;
@@ -89,12 +93,6 @@
     transition: 0.5s;
 }
 
-.header_main .box_nav .box_enforcement{
-    display: flex;
-    flex-direction:row;
-    align-items: center;
-}
-
 .header_main .box_nav .box_menu .action_menu{
     background-color: #ffd9e4;
 }
@@ -106,4 +104,329 @@
 
 .header_main .box_nav .box_menu .action_menu a{
     color: #e33493;
+}
+
+.header_main .box_nav .box_enforcement{
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+    justify-content: center;
+}
+
+.header_main .box_nav .box_enforcement .item_layout {
+    margin-right: 25px ;
+}
+
+.header_main .box_nav .box_enforcement .item_layout:last-child {
+    margin-right: 0;
+}
+
+.header_main .box_nav .box_enforcement .box_login .btn_login{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background: none;
+    border: none;
+    outline: none;
+}
+
+.header_main .box_nav .box_enforcement .box_login .btn_login:hover .text_login{
+    opacity: 0.6;
+    transition: 0.5s;
+}
+
+.header_main .box_nav .box_enforcement .box_login .btn_login .icon{
+    margin-right: 15px;
+}
+
+.box_enforcement .box_from .box_form--content{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 8px;
+    border: 2px solid transparent;
+}
+
+.box_enforcement .box_from .box_form--content:hover{
+    border: 2px solid #424242;
+    transition: 0.5s;
+}
+
+.box_enforcement .box_from .box_form--content input[type="text"]{
+    background: none;
+    border: none;
+    outline: none;
+    font-size:0.875rem;
+    color: #424242;
+}
+
+.box_enforcement .box_from .box_form--content input[type="text"]::-webkit-input-placeholder{
+    font-size: 0.75rem;;
+}
+
+.box_enforcement .box_from .box_form--content .btn_search{
+    background:none;
+    border: none;
+    outline:none;
+    font-size: 1rem;
+    color: #424242;
+}
+
+
+.header_main .box_nav .box_enforcement .box_login .btn_login .icon i{
+    padding: 5px 5px 5px 6px;
+    border-radius:50%;
+    background-color: #424242;
+    color: #fff;
+}
+
+.header_main .box_nav .box_enforcement .box_login .btn_login .text_login{
+    color: #424242;
+    font-size: 0.9375rem;
+}
+
+.header_main .box_nav .box_enforcement .box_cart i{
+    font-size:21px;
+    color:#424242;
+}
+
+.header_main .box_nav .box_enforcement .box_cart i:hover{
+    opacity: 0.8;
+    transition: 0.9s;
+    cursor: pointer;
+}
+
+/* open nav cart */
+
+.box_openCart{
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    overflow-x: hidden;
+    transition: 0.5s;
+    /* padding-top: 60px; */
+}
+
+.box_openCart .box_header {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 20px;
+    color: white;
+    background-color: #424242;
+    position: relative;
+}
+
+.box_openCart .box_header .text_header{
+    font-size:24px;
+}
+
+.box_openCart .box_header i{
+    position: absolute;
+    left: 30px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size:20px;
+    cursor: pointer;
+}
+
+.box_openCart .box_body {
+    padding: 40px 0 ;
+    text-align: center;
+}
+
+.box_openCart .box_body .text_body{
+    font-size:18px;
+    color: #424242;
+}
+
+.box_modal--cart{
+    position: fixed;
+    top: 0 ;
+    left: 0;
+    /* right: 0; */
+    bottom: 0;
+    transition: 1s;
+    background-color: rgba(0,0,0,0.5);
+}
+
+/* ==================== MODAL LOGIN ==================== */
+
+.box_login--open{
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #fff;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 100px;
+}
+
+.box_login--open .box_icon_close{
+    text-align: end;
+    margin-right: 50px;
+}
+
+.box_login--open .box_icon_close i{
+    font-size: 30px;
+    color: #424242;
+}
+
+/* với face và google */
+
+.box_login--open .box_main--user{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center; 
+    margin-top: 30px;
+    /* display: none; */
+}
+
+.box_login--open .box_main--user .box-header{
+    margin-bottom: 40px;
+}
+
+.box_login--open .box_main--user .box-header .header-title{
+    text-align: center;
+    font-size:50px;
+    font-weight: 800;
+    letter-spacing: 10px;
+    color: #424242;
+    margin-bottom: 30px;
+}
+
+.box_login--open .box_main--user .box-header .header-text{
+    text-align: center;
+    font-size: 18px;
+    color: #424242;
+}
+
+.box_login--open .box_main--user .box-header .header-text .chuyen_doi--user{
+    color: #839C80;
+    text-decoration: none;
+}
+
+.box_main--user .box-body{
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+}
+
+.box_main--user .box-body .box_with{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 18px;
+    padding: 12px 14px;
+    color: #fff;
+}
+
+.box_main--user .box-body .box_with:hover{
+    opacity: 0.8;
+    cursor: pointer;
+    transition: 0.6s;
+}
+
+.box_main--user .box-body .box_with.box_with--1{
+    background-color: #3b5998;
+}
+.box_main--user .box-body .box_with.box_with--2{
+    background-color: #4285f4;
+}
+
+.box_main--user .box-body .box_with i{
+    font-size: 20px;
+}
+
+.box_main--user .box-body .box_with .text-content{
+    padding: 0 58px;
+    font-size: 16px;
+}
+
+.box_main--user .box-footer{
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+}
+
+.box_main--user .box-footer .text{
+    text-align: center;
+    margin-bottom: 18px;
+    padding: 0 152px;
+    position: relative;
+}
+
+.box_main--user .box-footer .text::after{
+    content:"";
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    width:140px;
+    height: 1px;
+    background-color:#424242;
+}
+
+.box_main--user .box-footer .text::before{
+    content:"";
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    width:140px;
+    height: 1px;
+    background-color:#424242;
+}
+
+.box_main--user .box-footer .btn-with-Email{
+    padding: 12px 0;
+    border: 1px solid #424242;
+    border-radius: 0;
+    background-color: #fff;
+    outline: none;
+}
+
+/* với emails */
+.box_login--open .box_main--email{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center; 
+    margin-top: 30px;
+    /* display: none; */
+}
+
+.box_login--open .box_main--email .box-header{
+    margin-bottom: 40px;
+}
+
+.box_login--open .box_main--email .box-header .header-title{
+    text-align: center;
+    font-size:50px;
+    font-weight: 800;
+    letter-spacing: 10px;
+    color: #424242;
+    margin-bottom: 30px;
+}
+
+.box_login--open .box_main--email .box-header .header-text{
+    text-align: center;
+    font-size: 18px;
+    color: #424242;
+}
+
+.box_login--open .box_main--email .box-header .header-text .chuyen_doi--user{
+    color: #839C80;
+    text-decoration: none;
 }
