--- a/access/css/index.css
+++ b/access/css/index.css
@@ -782,3 +782,145 @@
     font-size: 14px;
     color: var(--col_1);
 }
+
+/* ====================================== */
+/* BOX CHAT */
+/* ====================================== */
+
+.box_main--message{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
+.box_main--message .btn_chat{
+    padding: 15px 30px;
+    font-size: 30px;
+    font-weight: 800;
+    background-color:#2c342b;
+    border: none;   
+    color: #fff;
+    /* display: none; */
+}
+
+/* main chat */
+.box_main--message .box_main_chat{
+    min-width:340px;
+    min-height: 500px;
+    /* border: 2px solid #000; */
+    display: none;
+}
+
+.box_main--message .box_main_chat .box_header{
+    padding: 20px;
+    background-color: #2c342b ;
+    border: 2px solid #000;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    color: white;
+}
+
+.box_main--message .box_main_chat .box_header .item_name{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.box_main_chat .box_header .item_name h2 {
+    margin-bottom: 10px;
+    font-size:20px; 
+    font-weight: 800;
+    letter-spacing:8px  
+}
+
+.box_main_chat .box_header .item_name .list_active{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.box_main_chat .box_header .item_name .list_active .dot{
+    margin-right: 10px;
+    font-size: 10px;
+    color: #43b72a;
+}
+
+.box_main_chat .box_header .item_name .list_active .status{
+    font-size: 14px;
+    color: #dbdcdb;
+}
+
+.box_main_chat .box_body{
+    height: 320px;
+    border-left: 2px solid #000;
+    border-right: 2px solid #000;
+    overflow-y: scroll;
+    background-color: var(--col_1) ;
+    padding: 20px;
+    
+}
+
+.box_main_chat .box_body .box_chat--text{
+    display : flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.box_main_chat .box_body .box_chat--text p{
+    padding:10px;
+    background-color: #fff;
+    margin-bottom: 20px;
+    border-radius: 36px;
+    width: 70%;
+    text-align: center;
+}
+
+.box_main_chat .box_body .box_chat--text p:nth-child(2n -1 ){
+    background-color: #d2ded1;
+    margin-left: 83px;
+
+}
+
+.box_footer{
+    padding: 20px;
+    background-color:white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-bottom: 2px solid #000;
+    border-left: 2px solid #000;
+    border-right: 2px solid #000;
+}
+
+.box_footer .list_input-send{
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+    justify-content:space-between;
+    margin-bottom: 10px;
+}
+
+.box_footer .list_input-send li{
+    color: #424242;
+}
+
+.box_footer .list_input-send li input{
+    width: 100%;
+    border: none;
+    outline: none;
+
+}
+
+.box_footer .list_input-icon {
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+}
+
+.box_footer .list_input-icon li{
+    margin-right: 10px;
+    color: #424242;
+}
