--- a/access/css/page/index.css
+++ b/access/css/page/index.css
@@ -736,7 +736,7 @@
     margin-bottom:10px;
     width: 100%;
     padding:10px;
-    border:2px solid red;
+    border:4px solid #576855;
 }
 
 .footer_main .box_main--content .inputEmail .btnSubmit{
